[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["HajraRafiq <hajrarafiq1828@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
